# My-Template-Python

./: .gitignore  .pre-commit-config.yaml  222222222222222  Dockerfile  LICENSE.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  todo.txt  versions.json
.github/workflows/: ci.yml  codeql.yml  test.yml  trivy.yml
0.0.0/: 404.html  index.html  sitemap.xml
0.0.0/code/: index.html
0.0.0/faq/: index.html
0.0.0/how-to-guides/: index.html
0.0.0/install/: index.html
0.0.0/manual/: index.html
0.0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1/code/: index.html
0.0.1/faq/: index.html
0.0.1/how-to-guides/: index.html
0.0.1/install/: index.html
0.0.1/manual/: index.html
0.0.2/: 404.html  index.html  sitemap.xml
0.0.2/code/: index.html
0.0.2/faq/: index.html
0.0.2/how-to-guides/: index.html
0.0.2/install/: index.html
0.0.2/manual/: index.html
0.0.3/code/: index.html
0.0.3/faq/: index.html
0.0.4/: 404.html
0000000000000/: 404.html  index.html  sitemap.xml
0000000000000/code/: index.html
0000000000000/faq/: index.html
0000000000000/how-to-guides/: index.html
0000000000000/install/: index.html
0000000000000/manual/: index.html
010101/: 404.html  index.html  sitemap.xml
010101/code/: index.html
010101/faq/: index.html
010101/how-to-guides/: index.html
010101/install/: index.html
010101/manual/: index.html
123456/: 404.html  index.html  objects.inv  sitemap.xml
123456/code/: index.html
123456/faq/: index.html
123456/how-to-guides/: index.html
123456/install/: index.html
123456/manual/: index.html
123456789/manual/: index.html
3/faq/: index.html
code/: index.html
docs/: code.md  explanation.md  how-to-guides.md  index.md  install.md  references.md  tutorials.md
how-to-guides/: index.html
install/: index.html
jjjjjjjjjjjjjj/: index.html
latest/: 404.html  index.html
latest/code/: index.html
latest/faq/: index.html
latest/how-to-guides/: index.html
latest/install/: index.html
latest/manual/: index.html
latest/overwrites/: main.html
mermaid/: 404.html  index.html  objects.inv  sitemap.xml
mermaid/code/: index.html
mermaid/faq/: index.html
mermaid/how-to-guides/: index.html
mermaid/install/: index.html
mermaid/manual/: index.html
meta/bom/: bom.json  bom.xml
meta/requirements/: requirements-dev.txt
requirements/: requirements-dev.txt
requirements/bom/: bom.json  bom.xml
scripts/: update-doc.py  update-doc.sh  update-project-properties.py
scripts/code-quality/: code-dependencies.sh  code-quality.sh  code-refactor.sh  code-test.sh
src/app/: __main__.py  calc.py  main.py
tests/unity/: calc_test.py  test_main.py
